# maxoxide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.ru.md
examples/: dispatcher_filters_bot.rs  echo_bot.rs  keyboard_bot.rs  live_api_test.rs  media_bot.rs  webhook_bot.rs
src/: bot.rs  dispatcher.rs  errors.rs  lib.rs  tests.rs  types.rs  uploader.rs  webhook.rs
src/types/: mod.rs
